@@ -20,7 +20,15 @@
 		</config.opens>
 		<config.exports>
 		</config.exports>
+		<surefireArgLine />
 	</properties>
+        <repositories>
+            <repository>
+                <id>rkfg.me</id>
+                <url>https://rkfg.me/maven</url>
+                <name>pickle</name>
+            </repository>
+        </repositories>
 	<dependencies>
 		<dependency>
 			<groupId>com.jcraft</groupId>
@@ -191,9 +199,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jmockit</groupId>
+			<groupId>com.github.hazendaz.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
-			<version>1.49</version>
+			<version>1.49.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -218,11 +226,19 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>2.0.0-alpha7</version>
 		</dependency>
+                <!-- https://mvnrepository.com/artifact/org.clojars.rhg135/fuse-jna -->
                 <dependency>
-                    <groupId>com.github.serceman</groupId>
-                    <artifactId>jnr-fuse</artifactId>
-                    <version>0.5.7</version>
+                    <groupId>fuse-jna</groupId>
+                    <artifactId>fuse-jna</artifactId>
+                    <version>1.0.2</version>
                 </dependency>
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>org.jacoco.agent</artifactId>
+			<classifier>runtime</classifier>
+			<version>0.8.8</version>
+			<scope>test</scope>
+		</dependency>
 		<!--<dependency>
 		    <groupId>com.dustinredmond.fxtrayicon</groupId>
 		    <artifactId>FXTrayIcon</artifactId>
@@ -231,6 +247,47 @@
 	</dependencies>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<id>pre-unit-test</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${project.basedir}/target/jacoco.exec</destFile>
+							<propertyName>surefireArgLine</propertyName>
+							<append>true</append>
+						</configuration>
+					</execution>
+					<execution>
+						<id>pre-invoker-test</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${project.basedir}/target/jacoco.exec</destFile>
+							<propertyName>invoker.mavenOpts</propertyName>
+							<append>true</append>
+						</configuration>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<dataFile>${project.basedir}/target/jacoco.exec</dataFile>
+							<outputDirectory>${project.basedir}/target/jacoco-results/</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -254,10 +311,10 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
+<!--			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-			</plugin>
+			</plugin>-->
 			<plugin>
 				<groupId>pl.gdela</groupId>
 				<artifactId>socomo-maven</artifactId>
@@ -267,8 +324,8 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<argLine>
-						-javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.49/jmockit-1.49.jar
-						-Dcoverage-classes=loaded
+						@{surefireArgLine}
+						-javaagent:"${settings.localRepository}"/com/github/hazendaz/jmockit/jmockit/1.49.3/jmockit-1.49.3.jar
 						--add-modules org.update4j
 						--add-opens fx/org.unigrid.janus.controller=ALL-UNNAMED
 						--add-opens fx/org.unigrid.janus.controller.component=ALL-UNNAMED
@@ -285,6 +342,7 @@
 						--add-opens fx/org.unigrid.janus.model=jakarta.xml.bind
 						--add-opens fx/org.unigrid.janus.model=jersey-client
 						--add-opens fx/org.unigrid.janus.model.entity=jersey-client
+						--add-opens fx/org.unigrid.janus.model.filesystem=weld.core.impl
 						--add-opens fx/org.unigrid.janus.view.backing=weld.core.impl
 						--add-exports fx/org.unigrid.janus.cdi=ALL-UNNAMED
 						--add-exports fx/org.unigrid.janus.controller.component=ALL-UNNAMED
